# CFS

./: .gitignore  CFS.h  CMakeLists.txt  config.h.in  errors.h  main.c
cmd_handler/: CMakeLists.txt  cmd_parsing.c  cmd_parsing.h
cmd_handler/handler/: CMakeLists.txt  handler.h
cmd_handler/handler/create_handler/: create_handler.c  create_handler.h
cmd_handler/handler/exit_handler/: exit_handler.c  exit_handler.h
cmd_handler/handler/ls_handler/: ls_handler.c  ls_handler.h
core/: core.h
core/virtual_fs/: CMakeLists.txt  file.h  vfs.c  vfs.h
core/virtual_fs/lib/: CMakeLists.txt  check_path.c  check_path.h  get_file_ext.c  get_file_ext.h  includes.h
lib/: CMakeLists.txt  includes.h
lib/String/: string.c  string.h
